# agent-looop

./: .gitignore  README.md  loop.config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: loop-task.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DRAFT-PR-AUTOMATION-HANDOFF.md  DRAFT-PR-CREATION-SPEC.md  POLICY.md  REPORT-CONTRACTS.md  ROADMAP.md  RUNBOOK.md  getting-started.md
reports/: manager-apply-2026-06-17.md  manager-dry-run-2026-06-17.md
reports/reviewer-runs/: issue-1-reviewer-report.md
reports/worker-plans/: issue-1-plan.md
reports/worker-runs/: issue-1-worker-run.md
scripts/: create_draft_pr.py  manager_apply.py  manager_dry_run.py  reviewer.py  worker_prototype.py
src/agent_looop/: __init__.py  draft_pr.py  manager_apply.py  manager_dry_run.py  parser.py  reviewer.py  worker_prototype.py
src/agent_looop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_draft_pr.py  test_manager_apply.py  test_manager_dry_run.py  test_parser.py  test_reviewer.py  test_worker_prototype.py
